
cc_library(
	name = "heap",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_assert//:assert",
		"@com_github_bazelboost_iterator//:iterator",
		"@com_github_bazelboost_throw_exception//:throw_exception",
		"@com_github_bazelboost_array//:array",
		"@com_github_bazelboost_concept_check//:concept_check",
		"@com_github_bazelboost_parameter//:parameter"
	],
)
